apps/pihole/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      hostname: pihole.local
      hostNetwork: false # set to true or false
      containers:
      - name: pihole
        image: "pihole/pihole:5.17.2" # use the appropriate image
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 53
            name: dns
            protocol: TCP
          - containerPort: 53
            name: dns-udp
            protocol: UDP
          - containerPort: 67
            name: client-udp
            protocol: UDP
        resources:
          # Define resources here
        volumeMounts:
          - mountPath: /etc/pihole
            name: config
          # Other volume mounts here
      volumes:
      - name: config
        emptyDir: {}
        # Other volumes here
